# burger_bot

./: .gitignore  Dockerfile  README.md  bot.py  emojis.py  main.py  pyproject.toml  requirements.txt
cogs/: animals.py  greetings.py  math.py  questions.py  radio.py  voicechat.py  voicechat_test.py
config/: example_emoji_catalogue.json  radio_catalogue.json
tests/: sounddevice_test.py  threading_test.py
