[project]
name = "burger-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "py-cord",
    "pynacl>=1.6.0",
    "python-dotenv>=1.1.1",
    "sounddevice>=0.5.3",
]

[tool.uv.sources]
py-cord = { git = "https://github.com/Pycord-Development/pycord.git" }
